--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
     <properties>
         <!-- Compile libs -->
         <fastjson.version>1.2.68</fastjson.version>
+        <gson.version>2.8.5</gson.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
 
         <!-- Test libs -->
@@ -159,6 +160,12 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>${fastjson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
             </dependency>
 
             <dependency>
